# phnt-single-header

./: .gitignore  .gitmodules  LICENSE  README.md  amalgamate.py  phnt_amalgamate.h  update.sh
.github/workflows/: build.yml  update.yml
test/: CMakeLists.txt  driver.cpp  test.cpp  test_impl.h
test/cmake/: FindWDK.cmake  TestSigning.pfx
